Bug 1791130 - Speed up s/mime recipient certificate check. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D162199

--HG--
extra : amend_source : 4b5ab18edb826469bfe81a0f581dbcf2acfae861